syntax = "proto3";

package kmeans;

message MapRequest {
    string input_location = 1;
    string files = 2;
    repeated string centroids = 3;
    int32 n_reducers = 4;
}

message MapResponse {
    enum Status {
        SUCCESS = 0;
        FAILURE = 1;
    }
    Status status = 1;
    repeated string intermediate_file_location = 2;
    
}

service MapperService {
    rpc Map(MapRequest) returns (MapResponse);
}

message ReduceRequest {
     repeated string centroids = 1;
     repeated string intermediate_file_locations=2;
    
}

message ReduceResponse {
    enum Status {
        SUCCESS = 0;
        FAILURE = 1;
    }
    Status status = 1;
    string output_file_path = 2;
}

service ReducerService {
    rpc Reduce(ReduceRequest) returns (ReduceResponse);
}
